--- a/www/plugins/demo/core/formwidgets/querybuilderwidget/partials/_querybuilderwidget.htm
+++ b/www/plugins/demo/core/formwidgets/querybuilderwidget/partials/_querybuilderwidget.htm
@@ -1,3 +1,4 @@
+<?php $this->addJs('/plugins/demo/core/controllers/javascriptlibrarycontroller/assets/js/engine.js') ?>
 <?php
 $modelInstance = new \Demo\Core\Models\ModelModel();
 if ($fetchModelFromField === false) {
@@ -7,11 +8,11 @@ if ($fetchModelFromField === false) {
 }
 
 ?>
-<input id="<?= $id ?>-input" name="<?= $name ?>" value="<?= e($value) ?>" type="hidden"/>
+<input id="<?= $id ?>-input" name="<?= $name ?>" type="hidden" value="<?= $value ?>"/>
 <div id="<?= $id ?>"></div>
 <script>
-    var sql_import_export = '<?=e($value)?>';
-    console.log(<?=json_encode($modelInstance->getDefinition())?>);
+    var sql_import_export = $('<div/>').html('<?=e($value)?>').html().trim();
+    var definition = <?=json_encode($modelInstance->getDefinition())?>;
     var mongo_import_export = {
         "$and": [{
             "price": {"$lt": 10.25}
@@ -23,7 +24,7 @@ if ($fetchModelFromField === false) {
             }]
         }]
     };
-
+    console.log(definition);
     var $queryBuilder = $('#<?=$id?>');
     $queryBuilder.queryBuilder({
         plugins: [
@@ -31,7 +32,7 @@ if ($fetchModelFromField === false) {
             'not-group'
         ],
 
-        filters: [{
+        filters: Engine.instance.mapFieldsToQueryBuilderFields(Engine.instance.getFields(definition))/*[{
             id: 'name',
             label: 'Name',
             type: 'string'
@@ -76,14 +77,18 @@ if ($fetchModelFromField === false) {
             validation: {
                 format: /^.{4}-.{4}-.{4}$/
             }
-        }]
+        }]*/
     });
     $queryBuilder.on('rulesChanged.queryBuilder', function (e, level) {
-        var sql = $(this).queryBuilder('getSQL') || {};
-        if (!sql.sql) {
-            // TODO : prevent form to be submitted
+        try {
+            var sql = $(this).queryBuilder('getSQL') || {};
+            if (!sql.sql) {
+                // TODO : prevent form to be submitted
+            }
+            $('#<?=$id?>-input').val(sql.sql);
+        } catch (e) {
+            console.error(e);
         }
-        $('#<?=$id?>-input').val(sql.sql);
     });
     if (sql_import_export.trim().length > 0) {
         $queryBuilder.queryBuilder('setRulesFromSQL', sql_import_export);
@@ -119,7 +124,7 @@ if ($fetchModelFromField === false) {
      });*/
 </script>
 <style>
-    .query-builder .rules-group-container{
+    .query-builder .rules-group-container {
         background: rgb(249, 249, 249);
     }
 </style>
