--- a/www/plugins/demo/core/templates/seed.file.twig
+++ b/www/plugins/demo/core/templates/seed.file.twig
@@ -50,7 +50,7 @@ class {{ className }} implements Seedable
         {% if packagable == true %}
             Db::table('{{ table }}')->where('plugin_id', {{ plugin.id }})->delete();
         {% else %}
-            Db::table('{{ table }}')->where('1', 1)->delete();
+            Db::table('{{ table }}')->delete();
         {% endif %}
     }
 }
