--- a/www/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css
+++ b/www/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css
@@ -1,3 +1,7 @@
-.engine-list-toolbar .engine-actions{
+.engine-list-toolbar .engine-actions {
     display: inline-block;
+}
+
+.engine-form-wrapper .btn-text a {
+    margin-right: 20px;
 }
