--- a/www/plugins/demo/core/formwidgets/querybuilderwidget/partials/_querybuilderwidget.htm
+++ b/www/plugins/demo/core/formwidgets/querybuilderwidget/partials/_querybuilderwidget.htm
@@ -1,7 +1,7 @@
 <?php
 $modelInstance = new \Demo\Core\Models\ModelModel();
 if ($fetchModelFromField === false) {
-    $modelInstance->model_type = $modelType;
+    $modelInstance->model = $modelType;
 } else {
 
 }
