Added noble UI theme

--- a/www/themes/nobleui/backend/layouts/default.htm
+++ b/www/themes/nobleui/backend/layouts/default.htm
@@ -13,6 +13,9 @@
     <nav class="sidebar">
         <?= $this->makeLayoutPartial('partials/sidebar') ?>
     </nav>
+    <nav class="settings-sidebar">
+        <?= $this->makeLayoutPartial('partials/setting') ?>
+    </nav>
     <!-- partial -->
 
     <div class="page-wrapper">
@@ -21,6 +24,8 @@
         <nav class="navbar">
             <?= $this->makeLayoutPartial('partials/header') ?>
         </nav>
+
+
         <!-- partial -->
 
         <div class="page-content">
