--- a/www/themes/nobleui/backend/layouts/partials/_header.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_header.htm
@@ -49,17 +49,17 @@
                 </div>
                 <div class="dropdown-body">
                     <div class="d-flex align-items-center apps">
-                        <a href="../demo_1/pages/apps/chat.html"><i data-feather="message-square"
-                                                                    class="icon-lg"></i>
+                        <a href="../../demo_1/pages/apps/chat.html"><i data-feather="message-square"
+                                                                       class="icon-lg"></i>
                             <p>Chat</p></a>
-                        <a href="../demo_1/pages/apps/calendar.html"><i data-feather="calendar"
-                                                                        class="icon-lg"></i>
+                        <a href="../../demo_1/pages/apps/calendar.html"><i data-feather="calendar"
+                                                                           class="icon-lg"></i>
                             <p>Calendar</p></a>
-                        <a href="../demo_1/pages/email/inbox.html"><i data-feather="mail"
-                                                                      class="icon-lg"></i>
+                        <a href="../../demo_1/pages/email/inbox.html"><i data-feather="mail"
+                                                                         class="icon-lg"></i>
                             <p>Email</p></a>
-                        <a href="../demo_1/pages/general/profile.html"><i data-feather="instagram"
-                                                                          class="icon-lg"></i>
+                        <a href="../../demo_1/pages/general/profile.html"><i data-feather="instagram"
+                                                                             class="icon-lg"></i>
                             <p>Profile</p></a>
                     </div>
                 </div>
@@ -228,7 +228,7 @@
                 <div class="dropdown-body">
                     <ul class="profile-nav p-0 pt-3">
                         <li class="nav-item">
-                            <a href="../demo_1/pages/general/profile.html" class="nav-link">
+                            <a href="../../demo_1/pages/general/profile.html" class="nav-link">
                                 <i data-feather="user"></i>
                                 <span>Profile</span>
                             </a>
