--- a/www/themes/nobleui/backend/layouts/partials/_head.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_head.htm
@@ -29,7 +29,7 @@ use System\Models\Parameter;
     <!--<link href="<?/*= Backend::skinAsset('assets/css/october.css') */?>?v<?/*= $coreBuild */?>" rel="stylesheet">-->
 
 
-    <script src="<?= Backend::skinAsset('assets/js/vendor/jquery.min.js') ?>?v<?= $coreBuild ?>"></script>
+    <!--<script src="<?/*= Backend::skinAsset('assets/js/vendor/jquery.min.js') */?>?v<?/*= $coreBuild */?>"></script>-->
     <script src="<?= Backend::skinAsset('assets/vendors/core/core.js')?>"></script>
 
     <script src="<?= Url::asset('modules/system/assets/js/framework.js') ?>?v<?= $coreBuild ?>"></script>
@@ -48,7 +48,7 @@ use System\Models\Parameter;
     <link rel="stylesheet" href="<?=Backend::skinAsset("assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css")?>">
     <!-- end plugin css for this page -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="<?=Backend::skinAsset("assets/fonts/feather-font/css/iconfont.css")?>">
+    <!--<link rel="stylesheet" href="<?/*=Backend::skinAsset("assets/fonts/feather-font/css/iconfont.css")*/?>">-->
     <link rel="stylesheet" href="<?=Backend::skinAsset("assets/vendors/flag-icon-css/css/flag-icon.min.css")?>">
     <!-- endinject -->
     <!-- Layout styles -->
