--- a/www/themes/nobleui/backend/assets/css/custom.css
+++ b/www/themes/nobleui/backend/assets/css/custom.css
@@ -1,3 +1,11 @@
+body {
+    font-family: "Overpass", sans-serif;
+    font-size: 1.3rem;
+    font-weight: 400;
+    line-height: .75;
+    -webkit-font-smoothing: antialiased;
+}
+
 .buy-now-wrapper {
     display: none;
 }
@@ -23,6 +31,7 @@
     border: 1px solid #e8ebf1;
     font-weight: 400;
     font-size: 1.375rem;
+    padding: 2px 5px;
 }
 
 .form-control:disabled, select:disabled, .email-compose-fields .select2-container--default .select2-selection--multiple:disabled, .select2-container--default .select2-selection--single:disabled, .select2-container--default .select2-selection--single .select2-search__field:disabled, .typeahead:disabled, .tt-query:disabled, .tt-hint:disabled, .form-control[readonly], select[readonly], .email-compose-fields .select2-container--default .select2-selection--multiple[readonly], .select2-container--default .select2-selection--single[readonly], .select2-container--default .select2-selection--single .select2-search__field[readonly], .typeahead[readonly], .tt-query[readonly], .tt-hint[readonly] {
@@ -32,6 +41,14 @@
 
 .card-body .field-repeater li.field-repeater-item {
     background: none;
+}
+
+.field-repeater .field-repeater-add-item:hover, .field-repeater .field-repeater-add-item:focus {
+    border-color: #727cf5;
+}
+
+.field-repeater .field-repeater-add-item > a {
+    font-weight: 400;
 }
 
 .control-tabs > div.tab-content > div.tab-pane.active.layout-cell {
@@ -60,12 +77,12 @@
     width: 58px;
 }
 
-.select2-container--default .select2-selection--single, span.select2.select2-container {
-    height: calc(1.5em + 0.75rem + 2px);
-}
+/*.select2-container--default .select2-selection--single, span.select2.select2-container {
+    height: 100%;
+}*/
 
-.relation-widget {
-    height: calc(2.5em + 0.75rem + 2px);
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 26px;
 }
 
 .custom-checkbox input[type=checkbox]:indeterminate + label:before, .custom-radio input[type=checkbox]:indeterminate + label:before, .custom-checkbox input[type=checkbox]:checked + label:before, .custom-radio input[type=checkbox]:checked + label:before {
@@ -92,15 +109,18 @@
 
 .control-tabs.primary-tabs > ul.nav-tabs > li.active a > span.title, .control-tabs.primary-tabs > div > ul.nav-tabs > li.active a > span.title, .control-tabs.primary-tabs > div > div > ul.nav-tabs > li.active a > span.title {
     border-top-color: #e8ebf1;
+    /*z-index: 12;*/
 }
 
 .control-tabs.primary-tabs > ul.nav-tabs > li.active a > span.title span, .control-tabs.primary-tabs > div > ul.nav-tabs > li.active a > span.title span, .control-tabs.primary-tabs > div > div > ul.nav-tabs > li.active a > span.title span {
     border-top-color: #e8ebf1;
+    /*z-index: 12;*/
 }
 
 .control-tabs.primary-tabs > ul.nav-tabs > li a > span.title:before, .control-tabs.primary-tabs > div > ul.nav-tabs > li a > span.title:before, .control-tabs.primary-tabs > div > div > ul.nav-tabs > li a > span.title:before, .control-tabs.primary-tabs > ul.nav-tabs > li a > span.title:after, .control-tabs.primary-tabs > div > ul.nav-tabs > li a > span.title:after, .control-tabs.primary-tabs > div > div > ul.nav-tabs > li a > span.title:after {
     background: #FFFFFF;
     border-color: #e8ebf1 !important;
+    /*z-index: 8;*/
 }
 
 .control-tabs > ul.nav-tabs > li a > span.title > span, .control-tabs > div > ul.nav-tabs > li a > span.title > span, .control-tabs > div > div > ul.nav-tabs > li a > span.title > span {
@@ -117,6 +137,31 @@
     font-weight: 400;
 }
 
+/**Richeditor*/
+.fr-toolbar .fr-command.fr-btn i, .fr-popup .fr-command.fr-btn i, .fr-toolbar .fr-command.fr-btn svg, .fr-popup .fr-command.fr-btn svg {
+    font-size: 11px;
+}
+
+/**Select2*/
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+    font-size: 1.175rem;
+}
+
+/**Query Builder*/
+.rules-group-container {
+    width: 100%;
+}
+
+.rules-group-header button {
+    margin: 0px 6px 8px 0px;
+    font-size: 1.175rem;
+}
+
+/**Default buttons*/
+.btn.btn-xs, .fc .btn-xs.fc-button, .swal2-modal .swal2-actions button.btn-xs, .wizard > .actions a.btn-xs {
+    font-size: 1.175rem;
+}
+
 /***navbar**/
 .nav > li > a:hover, .nav > li > a:focus {
     text-decoration: none;
@@ -130,8 +175,17 @@
     background-color: transparent;
     border-top: none;
     border-bottom: none;
+    margin-bottom: 10px;
 }
-
+.list-footer{
+    padding: 0px;
+}
+.control-list {
+    margin-bottom: 0px;
+}
+.control-toolbar{
+    padding: 0px 0px 8px 0px;
+}
 .list-widget table.table.data thead td, .list-widget table.table.data thead th, .list-widget table.table.data .list-checkbox {
     border: none;
 }
@@ -140,8 +194,19 @@
     border: none;
 }
 
+.list-flush table.table.data thead tr th {
+    border-width: 1px;
+    border-top: 1px solid #d4d8da !important;
+    border-bottom: 2px solid #d4d8da !important;
+    border-color: #d4d8da;
+}
+
 .table td {
     font-size: 1.175rem;
+}
+
+table.table.data tbody td, table.table.data tbody th {
+    padding: 10px 10px;
 }
 
 /**Buttons*/
@@ -158,11 +223,21 @@ table.table.data tbody tr td, table.table.data tbody tr th {
 }
 
 table.table.data tbody tr.rowlink:hover td, table.table.data tbody tr:not(.no-data).selected td {
-    background-color: transparent !important;
+    background-color: #eaeaea !important;
     color: #666;
 }
 
 .form-control.icon.search {
     background-position: right -84px;
     float: right;
+}
+
+/***navigation ***/
+.nav .nav-item .nav-link .link-icon {
+    font-size: 1.550rem;
+}
+
+/** breadcrumb**/
+.breadcrumb {
+    font-size: 1.350rem;
 }
