--- a/www/themes/nobleui/backend/layouts/partials/_head.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_head.htm
@@ -26,12 +26,11 @@ use System\Models\Parameter;
     $coreBuild = System\Models\Parameter::get('system::core.build', 1);
     ?>
     <link href="<?= Url::asset('modules/system/assets/ui/storm.css') ?>?v<?= $coreBuild ?>" rel="stylesheet">
-    <!--<link href="<?/*= Backend::skinAsset('assets/css/october.css') */?>?v<?/*= $coreBuild */?>" rel="stylesheet">-->
+    <link href="<?= Backend::skinAsset('assets/css/october.css') ?>?v<?= $coreBuild ?>" rel="stylesheet">
 
 
     <!--<script src="<?/*= Backend::skinAsset('assets/js/vendor/jquery.min.js') */?>?v<?/*= $coreBuild */?>"></script>-->
     <script src="<?= Backend::skinAsset('assets/vendors/core/core.js')?>"></script>
-
     <script src="<?= Url::asset('modules/system/assets/js/framework.js') ?>?v<?= $coreBuild ?>"></script>
     <script data-cfasync="false" src="<?= Url::asset('modules/system/assets/ui/storm-min.js') ?>?v<?= $coreBuild ?>"></script>
     <script data-cfasync="false" src="<?= Backend::skinAsset('assets/js/october-min.js') ?>?v<?= $coreBuild ?>"></script>
