--- a/www/themes/nobleui/backend/assets/css/custom.css
+++ b/www/themes/nobleui/backend/assets/css/custom.css
@@ -6,6 +6,15 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+.main-wrapper {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    overflow: scroll;
+}
+
 .buy-now-wrapper, .settings-sidebar {
     display: none;
 }
@@ -170,6 +179,10 @@ body {
 }
 
 /***list**/
+.table-wrapper {
+    position: relative;
+}
+
 .control-filter {
     padding: 0 10px;
     color: rgba(0, 0, 0, 0.6);
