--- a/www/themes/nobleui/backend/assets/css/custom.css
+++ b/www/themes/nobleui/backend/assets/css/custom.css
@@ -15,6 +15,15 @@ body {
     overflow: scroll;
 }
 
+.main-wrapper .page-wrapper .page-content {
+    flex-grow: 1;
+    padding: 5px;
+}
+
+.page-breadcrumb {
+    padding-top: 10px;
+}
+
 .buy-now-wrapper, .settings-sidebar {
     display: none;
 }
